--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
+---
 sudo: false
+dist: xenial
 language: python
 cache: pip
 
@@ -7,8 +9,7 @@ services:
 
 python:
   - '3.6'
-  - '3.7-dev'
-  - 'pypy3'
+  - '3.7'
 
 env:
   matrix:
@@ -22,7 +23,7 @@ env:
 matrix:
   fast_finish: true
   include:
-    - { python: '3.6', env: TOXENV=lint }
+    - {python: '3.6', env: TOXENV=lint}
 
   allow_failures:
     - env: DJANGO=master
@@ -50,7 +51,7 @@ deploy:
     tags: true
     python: '3.6'
     # admittedly, this condition is a bit silly but we want the deploy to happen
-    # on exactly one build, not all py36 builds, and looking for django 1.11 is a cheap
-    # way to accomplish that.
+    # on exactly one build, not all py36 builds, and looking for django 1.11 is
+    # a cheap way to accomplish that.
     condition: $DJANGO = '1.11'
     distributions: sdist bdist_wheel
