--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 [tox]
 toxworkdir = {env:TOX_WORK_DIR:.tox}
 envlist =
-       {py35,py36,py37,pypy3}-django111,
-       {py36,py37,pypy3}-django{20,21,master},
+       py{36,37}-django{111,20,21,master},
        lint
 skip_missing_interpreters = True
 
