--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,17 @@
-celery<5.0
+arrow
 dj-database-url
-mock
+celery<5.0
+flake8
+flake8-bugbear
+flake8-isort
+ipdb
+isort
+mbq.env>=0.2.0
+mbq.metrics>=0.4.5
+psycopg2-binary
+pytest
+pytest-django
 rollbar
+tox
+tox-travis
+tox-venv
