--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - .:/app
     links:
-      - mysql
+      - ranch-postgres
     environment:
       TOX_WORK_DIR: /tox
       PYTHON_VERSION: py36
@@ -23,13 +23,26 @@ services:
     volumes:
       - .:/app
     links:
-      - mysql
+      - ranch-postgres
     environment:
       TOX_WORK_DIR: /tox
       PYTHON_VERSION: py37
 
-  mysql:
-    image: mysql:5.6
+  test-admin:
+    build:
+      context: .
+      args:
+        IMAGE: 'python:3.7-slim-stretch'
+        INSTALL_DJANGO: 'TRUE'
+    volumes:
+      - .:/app
+    links:
+      - ranch-postgres
+    ports:
+      - '8080:8080'
+    command: [python, -m, manage, runserver, '0.0.0.0:8080']
+
+  ranch-postgres:
+    image: postgres:9.6.8
     environment:
-      - MYSQL_DATABASE=ranchdb
-      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+      POSTGRES_DB: ranch
