--- a/setup.cfg
+++ b/setup.cfg
@@ -2,11 +2,14 @@
 universal = 1
 
 [flake8]
+ignore = E203, E266, E501, W503
+max-complexity = 18
+max-line-length = 100
+select = B,C,E,F,I,W,T4,B9
 exclude =
-    .git,
     */migrations/*,
     .tox
-max_line_length = 100
+    .git
 
 [isort]
 default_section=FIRSTPARTY
@@ -18,3 +21,4 @@ line_length=100
 lines_after_imports=2
 multi_line_output=3
 sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+skip=migrations
