--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,11 @@ env:
     - DJANGO=1.11
     - DJANGO=2.0
     - DJANGO=2.1
-    - TOXENV=lint
 
 matrix:
   fast_finish: true
+  include:
+    - {python: '3.7', env: TOXENV=lint}
 
 install:
   - travis_retry pip install --upgrade pip tox tox-venv tox-travis
