--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,15 +1,15 @@
 arrow
 dj-database-url
 celery<5.0
-flake8==3.7.3
+flake8==3.7.4
 flake8-bugbear==18.8.0
-flake8-isort==2.3
+flake8-isort==2.6.0
 ipdb
-isort
+isort==4.3.4
 mbq.env>=1,<2
 mbq.metrics>=1,<2
 psycopg2-binary
-pytest
+pytest!=4.2.0,>=3.6
 pytest-django
 rollbar
 tox
