--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 toxworkdir = {env:TOX_WORK_DIR:.tox}
 envlist =
-       py{36,37}-django{111,20,21,master},
+       py{36,37}-django{111,20,21},
        lint
 skip_missing_interpreters = True
 
