ok forrealz pin flake versions

--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,6 @@ deps =
 [testenv:lint]
 commands = flake8
 deps =
-    flake8
-    flake8-isort
-    isort
+    flake8==3.7.4
+    flake8-isort==2.6.0
+    isort==4.3.4
