--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ deps =
     django21: Django>=2.1,<2.2
 
 [testenv:lint]
-commands = flake8 --version
+commands = flake8 --version && isort --version
 deps =
     flake8==3.7.4
     flake8-isort==2.6.0
