--- a/tox.ini
+++ b/tox.ini
@@ -25,8 +25,11 @@ deps =
     django21: Django>=2.1,<2.2
 
 [testenv:lint]
-commands = flake8 --version && isort --version && flake8
+commands =
+    flake8 --version
+    sort --version
+    flake8
 deps =
     flake8==3.7.4
-    flake8-isort==2.6.0
+    flake8-isort
     isort==4.3.4
