--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ deps =
 [testenv:lint]
 commands =
     flake8 --version
-    sort --version
+    isort --version
     flake8
 deps =
     flake8==3.7.4
