specify flake8 config file

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ deps =
 commands =
     flake8 --version
     isort --version
-    flake8
+    flake8 --config setup.cfg
 deps =
     flake8==3.7.4
     flake8-isort
