--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ deps =
 commands =
     flake8 --version
     isort --version
-    flake8 --config setup.cfg
+    flake8 --config setup.cfg --isort-show-traceback
 deps =
     flake8==3.7.4
     flake8-isort
