install same deps for isort

--- a/tox.ini
+++ b/tox.ini
@@ -30,6 +30,4 @@ commands =
     isort --version
     flake8 --config setup.cfg --isort-show-traceback
 deps =
-    flake8==3.7.4
-    flake8-isort
-    isort==4.3.4
+    -rrequirements-dev.txt
