--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,12 @@ matrix:
   fast_finish: true
   include:
     - {python: '3.7', env: TOXENV=lint}
-
-env:
-  matrix:
-    - DJANGO=1.11
-    - DJANGO=2.0
-    - DJANGO=2.1
+    - {python: '3.7', env: DJANGO=1.11}
+    - {python: '3.7', env: DJANGO=2.0}
+    - {python: '3.7', env: DJANGO=2.1}
+    - {python: '3.6', env: DJANGO=1.11}
+    - {python: '3.6', env: DJANGO=2.0}
+    - {python: '3.6', env: DJANGO=2.1}
 
 install:
   - travis_retry pip install --upgrade pip tox tox-venv tox-travis
