Ps/add test django project (#14)
* updated gitignore

* updated gitignore more

* wip

* fixed database url, local admin works

* can't find django bug still there :/

* isort

* make it so lint only runs in one travis job

* added space, fix isort?

* pin flake8v ersion

* lint sahn

* remove djangomaster

* ok forrealz pin flake versions

* output flake8 version instead of actually linting

* rm bugbear, use python3.7.1, print isort version

* add flake8 step

* changed commands

* comment out rest of matrix

* isort --version

* specify flake8 config file

* use --isort-show-traceback

* install same deps for isort

* holy shit I figured it out

* hooollyyyy shit it woooorrrkkkks

* can I get lint to run before tests?

* get lint to run first

* remove python matrix

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 .python-version
 .tox
+.mypy_cache
 
 *.egg-info
 *.py[co]
@@ -11,3 +12,6 @@ build
 dist
 
 pip-log.txt
+
+# VSCode
+.vscode
