--- a/.travis.yml
+++ b/.travis.yml
@@ -7,29 +7,16 @@ cache: pip
 services:
   - mysql
 
-python:
-  - '3.6'
-  - '3.7'
-
-env:
-  matrix:
-    - DJANGO=1.11
-    - DJANGO=2.0
-    - DJANGO=2.1
-    - DJANGO=master
-  global:
-    - DATABASE_URL=mysql://root:@127.0.0.1:3306/ranchdb
-
 matrix:
   fast_finish: true
   include:
-    - {python: '3.6', env: TOXENV=lint}
-
-  allow_failures:
-    - env: DJANGO=master
-
-before_install:
-  - mysql -e 'CREATE DATABASE ranchdb;'
+    - {python: '3.7', env: TOXENV=lint}
+    - {python: '3.7', env: DJANGO=1.11}
+    - {python: '3.7', env: DJANGO=2.0}
+    - {python: '3.7', env: DJANGO=2.1}
+    - {python: '3.6', env: DJANGO=1.11}
+    - {python: '3.6', env: DJANGO=2.0}
+    - {python: '3.6', env: DJANGO=2.1}
 
 install:
   - travis_retry pip install --upgrade pip tox tox-venv tox-travis
