--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 toxworkdir = {env:TOX_WORK_DIR:.tox}
 envlist =
-       py{36,37}-django{111,20,21,master},
+       py{36,37}-django{111,20,21},
        lint
 skip_missing_interpreters = True
 
@@ -10,7 +10,6 @@ DJANGO =
     1.11: django111
     2.0: django20
     2.1: django21
-    master: djangomaster
 
 [testenv]
 commands = python -m runtests
@@ -20,18 +19,15 @@ passenv =
     DATABASE_URL
 deps =
     .
-    -rrequirements.txt
     -rrequirements-dev.txt
     django111: Django>=1.11,<2.0
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
-    django{111,20}: mysqlclient==1.3.6
-    django{21,master}: mysqlclient==1.3.7
-    djangomaster: https://github.com/django/django/archive/master.tar.gz
 
 [testenv:lint]
-commands = flake8
+commands =
+    flake8 --version
+    isort --version
+    flake8 --config setup.cfg --isort-show-traceback
 deps =
-    flake8
-    flake8-isort
-    isort
+    -rrequirements-dev.txt
