--- a/setup.cfg
+++ b/setup.cfg
@@ -22,3 +22,7 @@ lines_after_imports=2
 multi_line_output=3
 sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 skip=migrations
+
+[black]
+line-length = 100
+py36 = true
