--- a/tox.ini
+++ b/tox.ini
@@ -26,8 +26,7 @@ deps =
 
 [testenv:lint]
 commands =
-    flake8 --version
-    isort --version
-    flake8 --config setup.cfg --isort-show-traceback
+    flake8 --isort-show-traceback
+    black --check .
 deps =
     -rrequirements-dev.txt
