--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,11 +28,11 @@ services:
       TOX_WORK_DIR: /tox
       PYTHON_VERSION: py37
 
-  test-admin:
+  admin:
     build:
       context: .
       args:
-        IMAGE: 'python:3.7-slim-stretch'
+        IMAGE: 'python:3.6-stretch'
         INSTALL_DJANGO: 'TRUE'
     volumes:
       - .:/app
@@ -42,7 +42,33 @@ services:
       - '8080:8080'
     command: [python, -m, manage, runserver, '0.0.0.0:8080']
 
+  celery:
+    build:
+      context: .
+      args:
+        IMAGE: 'python:3.6-stretch'
+        INSTALL_DJANGO: 'TRUE'
+    volumes:
+      - .:/app
+    links:
+      - ranch-postgres
+      - rabbitmq
+    command: [python, -m, manage, ranch_celery_worker]
+    networks:
+      - default
+
+  rabbitmq:
+    image: rabbitmq:3.7.8-management-alpine
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+
   ranch-postgres:
     image: postgres:9.6.8
     environment:
       POSTGRES_DB: ranch
+
+networks:
+  default:
+    external:
+      name: lcl.mbq.io
