--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     links:
       - ranch-postgres
       - rabbitmq
-    command: ["celery", "worker", "--app", "tests.celery", "--concurrency", "1"]
+    command: ["celery", "worker", "--app", "tests", "--concurrency", "1"]
     networks:
       - default
 
