--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .python-version
 .tox
 .mypy_cache
-
+**.env
 *.egg-info
 *.py[co]
 
@@ -15,3 +15,6 @@ pip-log.txt
 
 # VSCode
 .vscode
+
+# pycharm
+.idea
