--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,14 +1,15 @@
 arrow
 black
-dj-database-url
 celery<5.0
-flake8==3.7.4
+dj-database-url
 flake8-isort
+flake8==3.7.4
 ipdb
 isort==4.3.4
 ldclient-py>=6,<7
-mbq.env>=1,<2
+mbq.env>=2,<3
 mbq.metrics>=1,<2
+mypy-mypyc
 psycopg2-binary
 pytest!=4.2.0,>=3.6
 pytest-django
