--- a/setup.cfg
+++ b/setup.cfg
@@ -26,3 +26,13 @@ skip=migrations
 [black]
 line-length = 100
 py36 = true
+
+[mypy]
+warn_unused_ignores = True
+ignore_missing_imports = True
+
+[mypy-mbq.*]
+ignore_missing_imports = False
+
+[mypy-setup,*.admin,*.migrations.*]
+ignore_errors = True
